# sunlo-solid

./: README.md  app.config.ts  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  todo.txt  tsconfig.json
src/: app.css  app.tsx  auth-state-provider.tsx  entry-server.tsx  error-fallback.tsx  page-transition-maker.tsx  sidebar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: garlic.tsx  show-error.tsx  sidebar.tsx
src/lib/: languages.ts  queries.ts  resource-deck.ts  resource-language.ts  resource-profile.ts  supabase-client.ts  utils.ts
src/routes/: (auth).tsx  (single-form).tsx  [...404].tsx  about.tsx  index.tsx
src/routes/(auth)/: getting-started.tsx  learn.tsx  profile.tsx
src/routes/(auth)/learn/: [lang].tsx  index.tsx  new-language.tsx
src/routes/(single-form)/: forgot-password.tsx  login-form.tsx  login.tsx  set-new-password.tsx  signup.tsx
src/types/: main.ts  supabase.ts
