[package]
name = "Sunlo"
version = "0.5.0"
description = "A Social Language Learning App"
authors = ["@michaelsnook"]
license = ""
repository = "michaelsnook/sunlo-solid"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.3", features = [] }
